tests/basic/check/prim/100.pan.out
tests/basic/check/prim/100.pan:2:8-12: error: invalid subtype: ğŸ™ <: â„‚ğ•™
tests/basic/check/prim/100.pan:5:8-12: error: invalid subtype: ğ”¹ <: â„‚ğ•™
tests/basic/check/prim/100.pan:8:8-9: error: invalid subtype: â„¤ <: â„‚ğ•™
tests/basic/check/prim/100.pan:11:8-15: error: invalid subtype: ğ•Š <: â„‚ğ•™
tests/basic/check/prim/100.pan:14:8-11: error: invalid subtype: ğ•Š <: â„‚ğ•™