tests/basic/check/prim/100.pan
f100 : char
f100 = unit

f101 : char
f101 = true

f102 : char
f102 = 1

f103 : char
f103 = "hello"

f104 : char
f104 = "h"
